fix backdrop filter on ios

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
     right: 0;
     height: 100%;
     width: 100%;
+    -webkit-backdrop-filter: brightness(var(--bp));
     backdrop-filter: brightness(var(--bp));
     z-index: 2;
 }
